Add JPA entities, repositories and estructura controller
- Rename P001AEntity to DatosGeneralesEntity (table: DATOS_GENERALES)
- Add 28 JPA entities for all project structures (GP_, FOVIS, bienes)
- Add JPA repositories for all entities
- Update EstructuraController with P-001A, P-002A, P-003A persistence
- Other estructura endpoints (P-004C to P-055A) return OK as stubs
- Update SQL scripts with renamed tables
- Delete outdated tests that referenced removed classes

Entities added:
- DatosGeneralesEntity, GpProyectoEntity, GpDatosGeneralesEntity
- CronogramaEntity, LocalizacionEntity, FuenteRecursosEntity
- CoberturaProyectadaEntity, CoberturaEjecutadaEntity, SeguimientoEntity
- InfraestructuraEntity, FondosCreditoEntity, CarteraEdadesEntity
- ArrendamientoEntity, ComodatoEntity, CompraInmueblesEntity
- PermutaEntity, NegociacionAccionesEntity, CapitalizacionesEntity
- ProyectoFovisEntity, CronogramaFovisEntity, CoberturaFovisEntity
- SeguimientoFovisEntity, AspectosVisEntity, TipologiaVisEntity
- CreditosHipotecariosEntity, AdquisicionLotesEntity, RenovacionUrbanaEntity